# shop-fastapi

./: .env.example  Dockerfile  LAB0_REPORT.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lab3.yml  lab4.yml  pipeline.yml
alembic/: env.py
alembic/versions/: 001_create_products.py
charts/ecommerce-app/: Chart.yaml  values-prod.yaml  values.yaml
charts/ecommerce-app/templates/: configmap.yaml  deployment.yaml
k8s/: configmap.yaml  deployment.yaml  postgres.yaml  secret.yaml  service.yaml
src/ecommerce/: main.py
src/ecommerce/application/services/: __init__.py  product_service.py
src/ecommerce/domain/entities/: __init__.py  product.py
src/ecommerce/domain/repositories/: __init__.py  product_repository.py
src/ecommerce/infrastructure/: config.py
src/ecommerce/infrastructure/database/: __init__.py  connection.py
src/ecommerce/infrastructure/database/models/: __init__.py  product_model.py
src/ecommerce/infrastructure/database/repositories/: __init__.py  sqlalchemy_product_repository.py
src/ecommerce/infrastructure/logging/: __init__.py  json_logger.py
src/ecommerce/presentation/api/: app.py  exceptions.py
src/ecommerce/presentation/api/routers/: health.py  products.py
src/ecommerce/presentation/api/schemas/: __init__.py  error.py  response.py  (+1 more)
tests/: conftest.py  lab1_test.sh  lab2_test.sh  lab3_test.sh  lab4_test.sh  test_products.py
tests/application/services/: test_product_service.py
tests/domain/: test_product.py
tests/presentation/schemas/: test_error.py  test_product_schema.py  test_response.py
